--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.maciejwalkowiak.spring</groupId>
+			<artifactId>wiremock-spring-boot</artifactId>
+			<version>2.1.2</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
